compiler/tests/invalid_programs/syntax/invalid_call.jm
#!SyntaxError

foo = "foo"
puts(foo"bar"
